Add OpenAPI support + Swagger UI for both services

--- a/city/src/main/resources/application.yml
+++ b/city/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     name: beacon-city
 server:
   port: ${CITY_PORT:8080}
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    url: /v3/api-docs.yml
