--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: Build
+name: Build and Release
 on:
   push:
-    # only trigger on branches, not on tags
-    branches: '**'
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,3 +36,9 @@ jobs:
           files: ./city/build/reports/jacoco/test/jacocoTestReport.xml
           flags: city
           name: City
+      - name: Execute Gradle createRelease
+        # Ordinarily I'd just run the release command and let Gradle handle making and pushing tags. However, https://github.com/allegro/axion-release-plugin/issues/401 causes an issue because JGit can't use newer SSH keys.
+        # This command will make the git tag.
+        run: ./gradlew createRelease
+      - name: Push the new tag
+        run: NEW_TAG=$(git tag) && echo Preparing to push new tag "'$NEW_TAG'" && git push origin $NEW_TAG
