--- a/central-identity-server/src/main/resources/application.yml
+++ b/central-identity-server/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     name: beacon-cis
 server:
   port: ${CIS_PORT:9876}
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    url: /v3/api-docs.yml
