Split two services into two heroku apps

--- a/central-identity-server/src/main/resources/application.yml
+++ b/central-identity-server/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   application:
     name: beacon-cis
 server:
-  port: ${CIS_PORT:9876}
+  # The PORT environment variable is set by Heroku
+  port: ${PORT:9876}
 springdoc:
   api-docs:
     enabled: false
