--- a/central-identity-server/build.gradle
+++ b/central-identity-server/build.gradle
@@ -115,5 +115,5 @@ task generateClientLibrary(type: GenerateTask, dependsOn: createVersionedSpec) {
 compileJava.dependsOn(generateServerStubs)
 assemble.dependsOn(generateClientLibrary)
 
-// Stupid Heroku requirement
-task stage(dependsOn: ['build', 'clean'])
+// For Heroku
+task stage(dependsOn: ['bootJar'])
