--- a/central-identity-server/build.gradle
+++ b/central-identity-server/build.gradle
@@ -38,6 +38,8 @@ sourceSets {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	implementation project(':common')
 	// Required for OpenApi generator
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
