Support user-uploaded profile pictures
There are a few issues here that I'll probably clean up later.

--- a/central-identity-server/build.gradle
+++ b/central-identity-server/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	// https://docs.spring.io/spring-boot/docs/current/reference/html/configuration-metadata.html#configuration-metadata.annotation-processor.configuring
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// Disabled until we've got a rough schema as well as a mongo config
