--- a/central-identity-server/build.gradle
+++ b/central-identity-server/build.gradle
@@ -61,8 +61,8 @@ dependencies {
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// Disabled until we've got a rough schema as well as a mongo config
-//	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	testImplementation("org.assertj:assertj-core:3.22.0")
 }
 
 tasks.named('test') {
