--- a/common/build.gradle
+++ b/common/build.gradle
@@ -22,6 +22,9 @@ dependencyManagement {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // For nicer error messages in the API
+    implementation 'org.zalando:problem-spring-web-starter:0.28.0-RC.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
