--- a/city/build.gradle
+++ b/city/build.gradle
@@ -5,10 +5,12 @@ plugins {
     id 'org.springframework.boot' version '2.6.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "org.openapi.generator" version "5.4.0"
+    id "com.github.node-gradle.node" version "3.2.1"
 }
 
 ext {
-    beaconCitySpec = "${project.projectDir}/src/main/openapi/beacon-city.openapi.yml"
+    beaconCitySpec = "${project.rootDir}/common/src/main/openapi/beacon-city.openapi.yml"
+    bundledBeaconCitySpec = "${project.buildDir}/openapi/beacon-city-bundled.openapi.yml"
     versionedBeaconCitySpec = "${project.buildDir}/openapi/beacon-city-versioned.openapi.yml"
     openApiGeneratedSourceDir = "${project.buildDir}/openapi/generated-source"
     openApiGeneratedClientSourceDir = "${project.buildDir}/openapi/generated-client-source"
@@ -70,8 +72,18 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-task createVersionedSpec(type: Copy) {
-    from beaconCitySpec
+task bundleSpecs(type: NpxTask) {
+    command = 'swagger-cli@4.0.4'
+    args = ['bundle',beaconCitySpec,'--outfile',bundledBeaconCitySpec,'--type','yaml']
+    inputs.files beaconCitySpec
+    outputs.files bundledBeaconCitySpec
+    doLast {
+        println "Successfully bundled specification!"
+    }
+}
+
+task createVersionedSpec(type: Copy, dependsOn: bundleSpecs) {
+    from bundledBeaconCitySpec
     into "${project.buildDir}/openapi"
     rename { String specFileName -> "beacon-city-versioned.openapi.yml" }
     filter(ReplaceTokens, tokens: [version: project.version])
