--- a/common/src/main/openapi/schemas/_index.yaml
+++ b/common/src/main/openapi/schemas/_index.yaml
@@ -1,8 +1,8 @@
 ProblemResponse:
   $ref: './ProblemResponse.yml'
-ZonedDateTime:
-  $ref: "./ZonedDateTime.yml"
 CreateAccountRequest:
   $ref: "./CreateAccountRequest.yml"
 UserAccount:
   $ref: "./UserAccount.yml"
+Message:
+  $ref: "./Message.yml"
