Start adding a TON of stuff to the API spec

--- a/common/src/main/openapi/parameters/_index.yaml
+++ b/common/src/main/openapi/parameters/_index.yaml
@@ -1,2 +1,8 @@
 user-account-id:
   $ref: "./path/user-account-id.yml"
+tower-id:
+  $ref: "./path/tower-id.yml"
+channel-id:
+  $ref: "./path/channel-id.yml"
+message-id:
+  $ref: "./path/message-id.yml"
