--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "buildpacks": [
     {
-      "url": "heroku/jvm"
+      "url": "https://github.com/heroku/heroku-buildpack-gradle.git"
     }
   ]
 }
