--- a/city/src/main/resources/application-heroku-prod.yml
+++ b/city/src/main/resources/application-heroku-prod.yml
@@ -4,3 +4,4 @@ spring:
       uri: mongodb+srv://springMongoUser:${MONGODB_PASSWORD}@prodcluster0.bdjwu.mongodb.net/beacon-city-prod?retryWrites=true&w=majority
 city:
   cis-url: https://beacon-cis.herokuapp.com
+  hostname: beacon-city.herokuapp.com
