--- a/city/build.gradle
+++ b/city/build.gradle
@@ -126,7 +126,7 @@ task generateServerStubs(type: GenerateTask, dependsOn: createVersionedSpec) {
             'performBeanValidation'  : 'true',
     ]
     typeMappings = [
-            'DateTime': 'ZonedDateTime',
+            'DateTime': 'Instant',
     ]
     importMappings = [
             'Instant'      : 'java.time.Instant',
