--- a/common/src/main/openapi/schemas/Tower.yml
+++ b/common/src/main/openapi/schemas/Tower.yml
@@ -5,6 +5,10 @@ properties:
     description: The unique ID of this Tower
     type: string
     example: 507f1f77bcf86cd799439011
+  city_id:
+    description: The ID of the City that this Tower belongs to
+    type: string
+    example: 507f1f77bcf86cd799439011
   name:
     description: The name of this tower
     type: string
