Add _Tower_ membership to the City service
This doesn't yet communicate with the CIS to add or remove "members" from the City. The commit was getting pretty big, so I wanted to isolate that change from this one.

--- a/common/src/main/openapi/schemas/Tower.yml
+++ b/common/src/main/openapi/schemas/Tower.yml
@@ -22,3 +22,8 @@ properties:
     type: array
     items:
       type: string
+  member_account_ids:
+    description: The account IDs of the members of this Tower.
+    type: array
+    items:
+      type: string
