--- a/city/build.gradle
+++ b/city/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     // For TSID generation
     implementation 'com.github.f4b6a3:tsid-creator:4.2.1'
+    // For DigitalOcean storage
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.232'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
