Allow the City Heroku apps to use our Space

--- a/central-identity-server/src/main/resources/application-heroku-prod.yml
+++ b/central-identity-server/src/main/resources/application-heroku-prod.yml
@@ -2,3 +2,7 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://springMongoUser:${MONGODB_PASSWORD}@prodcluster0.bdjwu.mongodb.net/beacon-cis-prod?retryWrites=true&w=majority
+do:
+  spaces:
+    key: ${DO_SPACES_KEY}
+    secret: ${DO_SPACES_SECRET}
