--- a/central-identity-server/src/main/resources/application-heroku-qa.yml
+++ b/central-identity-server/src/main/resources/application-heroku-qa.yml
@@ -2,3 +2,7 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://springMongoUser:${MONGODB_PASSWORD}@beacon-east.lw78i.mongodb.net/beacon-cis-main-staging?retryWrites=true&w=majority
+do:
+  spaces:
+    key: ${DO_SPACES_KEY}
+    secret: ${DO_SPACES_SECRET}
