--- a/.github/workflows/delete-pr-env.yml
+++ b/.github/workflows/delete-pr-env.yml
@@ -1,11 +1,11 @@
 name: Delete Environment (default settings)
 
-#on:
-#  push
 on:
-  pull_request:
-    branches: [main]
-    types: [closed, converted_to_draft]
+  push
+#on:
+#  pull_request:
+#    branches: [main]
+#    types: [closed, converted_to_draft]
 
 jobs:
   delete:
