--- a/.github/workflows/delete-pr-env.yml
+++ b/.github/workflows/delete-pr-env.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: strumwolf/delete-deployment-environment@v2
         with:
           # ⚠️ The provided token needs permission for admin write:org
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ENV_DEL_TOKEN }}
           environment: beacon-cis-pr-${{ github.event.number }} beacon-city-pr-${{ github.event.number }}
       - run: |
           echo github.event.number = ${{ github.event.number  }}
