--- a/.github/workflows/delete-pr-env.yml
+++ b/.github/workflows/delete-pr-env.yml
@@ -1,9 +1,7 @@
 name: Delete PR Environments
 
 on:
-  pull_request:
-    branches: [main]
-    types: [closed, converted_to_draft]
+  push
 
 jobs:
   delete:
@@ -13,7 +11,7 @@ jobs:
         with:
           # ⚠️ The provided token needs permission for admin write:org
           token: ${{ secrets.ENV_DEL_TOKEN }}
-          environment: beacon-cis-pr-${{ github.event.number }} beacon-city-pr-${{ github.event.number }}
+          environment: beacon-cis-pr-83
       - run: |
           echo github.event.number = ${{ github.event.number  }}
           echo github.event.pull_request.number = ${{ github.event.pull_request.number }}
