--- a/.github/workflows/delete-pr-env.yml
+++ b/.github/workflows/delete-pr-env.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: strumwolf/delete-deployment-environment@v2
         with:
-          # ⚠️ The provided token needs permission for admin write:org
+          # ⚠️ The provided token needs permission for admin write:org!
           token: ${{ secrets.ENV_DEL_TOKEN }}
           environment: beacon-cis-pr-${{ github.event.number }} beacon-city-pr-${{ github.event.number }}
       - run: |
