--- a/.github/workflows/delete-pr-env.yml
+++ b/.github/workflows/delete-pr-env.yml
@@ -6,14 +6,26 @@ on:
     types: [closed, converted_to_draft]
 
 jobs:
-  delete:
+  delete-cis:
     runs-on: ubuntu-latest
     steps:
       - uses: strumwolf/delete-deployment-environment@v2
         with:
           # ⚠️ The provided token needs permission for admin write:org!
           token: ${{ secrets.ENV_DEL_TOKEN }}
-          environment: beacon-cis-pr-${{ github.event.number }} beacon-city-pr-${{ github.event.number }}
+          environment: beacon-cis-pr-${{ github.event.number }}
+      - run: |
+          echo github.event.number = ${{ github.event.number  }}
+          echo github.event.pull_request.number = ${{ github.event.pull_request.number }}
+          echo github.event.issue.number = ${{ github.event.issue.number }}
+  delete-city:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: strumwolf/delete-deployment-environment@v2
+        with:
+          # ⚠️ The provided token needs permission for admin write:org!
+          token: ${{ secrets.ENV_DEL_TOKEN }}
+          environment: beacon-city-pr-${{ github.event.number }}
       - run: |
           echo github.event.number = ${{ github.event.number  }}
           echo github.event.pull_request.number = ${{ github.event.pull_request.number }}
