--- a/.github/workflows/delete-pr-env.yml
+++ b/.github/workflows/delete-pr-env.yml
@@ -14,10 +14,11 @@ jobs:
           # ⚠️ The provided token needs permission for admin write:org
           token: ${{ secrets.ENV_DEL_TOKEN }}
           environment: beacon-cis-pr-${{ github.event.number }}
-      - run: |
+      - name: Show env vars
+        run: |
           echo github.event.number = ${{ github.event.number  }}
           echo github.event.pull_request.number = ${{ github.event.pull_request.number }}
-          echo github.event.issue.number = ${{ github.event.issue.number }`}
+          echo github.event.issue.number = ${{ github.event.issue.number }}
   delete-city:
     runs-on: ubuntu-latest
     steps:
@@ -26,7 +27,8 @@ jobs:
           # ⚠️ The provided token needs permission for admin write:org
           token: ${{ secrets.ENV_DEL_TOKEN }}
           environment: beacon-city-pr-${{ github.event.number }}
-      - run: |
+      - name: Show env vars
+        run: |
           echo github.event.number = ${{ github.event.number  }}
           echo github.event.pull_request.number = ${{ github.event.pull_request.number }}
           echo github.event.issue.number = ${{ github.event.issue.number }}
