--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.zalando:problem-spring-web-starter:0.28.0-RC.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
 }
 
 tasks.named('test') {
